--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -9,7 +9,9 @@
   &__side{
     height: 52rem;
     transition: all .8s ease;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+
     border-radius:3px;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black,.15);
