--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,13 +15,17 @@
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100% );
 
 
-  @media (min-resolution: 192dpi) and (min-width:37.5em ), (min-width:125em ){
+  @media (min-resolution: 192dpi) and (min-width:37.5em ), (min-width:125em ),
+(-webkit-min-device-pixel-ration: 2) and (min-width:37.5em ), (min-width:125em ){
     background-image: linear-gradient(
                     to right,
                     rgba($color-primary-light, 0.8),
                     rgba($color-primary-dark, 0.8)),
     url(../img/hero.jpg);
   }
+
+
+
 
 
   @include respond(phone){
